fix a bug where horizontally overflowed text would generate a horizontal scroll bar on mobile devices

--- a/less/mensu-blog.less
+++ b/less/mensu-blog.less
@@ -127,9 +127,7 @@ pre,
 
 // In the post
 .post-container {
-	* {
-    overflow-x: scroll;
-	}
+	word-break: break-all;
 	h1,
 	h2,
 	h3,
